--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,8 @@
 @import "./base/footer";
 @import "./base/products";
 @import "./base/cases";
-
+@import "./base/features";
+@import "./base/faq";
+@import "./base/tesmonials";
+@import "./base/cta";
 
