--- a/sass/base/_header.scss
+++ b/sass/base/_header.scss
@@ -2,7 +2,16 @@
     max-width: 390px;
     margin: auto;
     padding: 40px 16px;
-    background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(26,26,26,1) 70%), url(/images/header-abstract.svg);
+    background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(26,26,26,1) 70%), url(../images/header-abstract.svg);
+    background-repeat: no-repeat;
+    @media screen and (min-width: 1440px) {
+        min-width: 1440px;
+        padding: 30px 80px;
+    }
+    @media screen and (min-width: 1920px) {
+        min-width: 1920px;
+        padding: 50px 162px;
+    }
     &__nav {
         display: flex;
         justify-content: space-between;
@@ -10,10 +19,130 @@
         border-radius: 100px;
         border: 1px solid var(--grey-15);
         background-color: var(--grey-11);
+        @media screen and (min-width: 1440px) {
+            padding: 14px 24px;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 20px 34px;
+        }
     }
     &__nav-logo {
         display: flex;
         align-items: center;
+        gap: 5px;
+        @media screen and (min-width: 1440px) {
+            gap: 6px;
+        }
+        @media screen and (min-width: 1920px) {
+            gap: 7px;
+        }
+    }
+    &__nav-name-img {
+        @media screen and (min-width: 1440px) {
+            width: 84px;
+            height: 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 112px;
+            height: 18px;
+        }
+    }
+    &__nav-logo-img {
+        @media screen and (min-width: 1440px) {
+            width: 25px;
+            height: 25px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 33px;
+            height: 33px;
+        }
+    }
+    &__nav-list {
+        display: none;
+        align-items: center;
+        gap: 10px;
+        @media screen and (min-width: 1440px) {
+            display: flex;
+        }
+    }
+    &__nav-item {
+        padding: 10px 18px;
+        border-radius: 82px;
+        transition: 0.2s;
+        @media screen and (min-width: 1920px) {
+            padding: 12px 24px;
+        }
+    }
+    &__nav-item:hover {
+        padding: 10px 18px;
+        border-radius: 82px;
+        background-color: var(--grey-15);
+        @media screen and (min-width: 1920px) {
+            padding: 12px 24px;
+        }
+    }
+    &__nav-link {
+        color: var(--white-90);
+        font-weight: 400;
+        line-height: 150%;  
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;        
+        }             
+    }
+    .current {
+        padding: 10px 18px;
+        border-radius: 82px;
+        background-color: var(--grey-15);
+    }
+    &__btns {
+        display: flex;
+        gap: 10px;
+    }
+    &__btn-signup {
+        cursor: pointer;
+        padding: 12px 24px;
+        border-radius: 82px;
+        color: var(--absolute-white);
+        font-weight: 400;
+        line-height: 150%;
+        background-color: var(--grey-11);
+        border: none; 
+        transition: 0.2s;
+        display: none;
+        @media screen and (min-width: 1440px) {
+            display: block;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 14px 30px;
+            font-size: 18px;
+        }  
+    }
+    &__btn-signup:hover {
+        background-color: var(--green-60);
+        color: var(--grey-11);
+    }
+    &__btn-login {
+        cursor: pointer;
+        padding: 12px 24px;
+        border-radius: 82px;
+        color: var(--absolute-white);
+        font-weight: 400;
+        line-height: 150%;
+        background-color: var(--grey-11);
+        border: none;
+        transition: 0.2s;
+        display: none;
+        @media screen and (min-width: 1440px) {
+            display: block;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 14px 30px;
+            font-size: 18px;
+        }  
+    }
+    &__btn-login:hover {
+        background-color: var(--green-60);
+        color: var(--grey-11);
     }
     &__nav-btn-mobile {
         cursor: pointer;
@@ -21,5 +150,8 @@
         border: none;
         border-radius: 82px;
         background-color: var(--green-60);
+        @media screen and (min-width: 1440px) {
+            display: none;
+        }
     }
 }
