--- a/sass/base/_hero.scss
+++ b/sass/base/_hero.scss
@@ -2,10 +2,27 @@
     max-width: 390px;
     margin: auto;
     padding: 10px 16px 60px 16px;
+    @media screen and (min-width: 1440px) {
+        min-width: 1440px;
+        padding: 60px 200px 60px 60px;
+        display: flex;
+        gap: 100px;
+    }
+    @media screen and (min-width: 1920px) {
+        min-width: 1920px;
+        padding: 75px 162px;
+    }
     &__title {
         display: flex;
         flex-direction: column;
         align-items: center;
+        @media screen and (min-width: 1440px) {
+            align-items: start;
+            width: 650px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 826px;
+        }
     }
     &__title-check {
         display: flex;
@@ -15,11 +32,32 @@
         border-radius: 61px;
         background-color: var(--grey-15);
         margin-bottom: 12px;
+        @media screen and (min-width: 1440px) {
+            align-items: start;
+            margin-bottom: 16px;
+        }
+        @media screen and (min-width: 1920px) {
+            gap: 8px;
+            padding: 10px 20px 10px 12px;
+            margin-bottom: 20px;
+        }
+    }
+    &__title-check-img {
+        @media screen and (min-width: 1920px) {
+            width: 24px;
+            height: 24px;
+        }
     }
     &__title-check-text {
         color: var(--absolute-white);
         font-size: 12px;
         line-height: 24px;
+        @media screen and (min-width: 1440px) {
+            font-size: 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
+        }
     }
     &__title-text {
         color: var(--absolute-white);
@@ -28,12 +66,33 @@
         line-height: 150%;
         text-align: center;
         margin-bottom: 8px;
+        @media screen and (min-width: 1440px) {
+            font-size: 38px;
+            margin-bottom: 10px;
+            text-align: start;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 48px;
+            margin-bottom: 14px;
+        }
+    }
+    &__title-text-green {
+        color: var(--green-60);
     }
     &__title-description {
         color: var(--white-90);
         line-height: 150%;
         text-align: center;
         margin-bottom: 30px;
+        @media screen and (min-width: 1440px) {
+            font-size: 16px;
+            margin-bottom: 40px;
+            text-align: start;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
+            margin-bottom: 50px;
+        }
     }
     &__title-btn {
         cursor: pointer;
@@ -44,6 +103,10 @@
         border: none;
         border-radius: 82px;
         background-color: var(--green-60);
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
+            padding: 18px 30px;
+        }
     }
     &__money-border {
         margin: 0 26px;
@@ -52,7 +115,12 @@
         border-radius: 6px;
         border: 0.51px solid var(--grey-15);
         background-image:linear-gradient(226deg,rgba(202,255,51,0.2) 10%,
-        rgb(38,38,38) 15%, rgb(38,38,38) 80%, rgba(202,255,51,0.2) 100%);        
+        rgb(38,38,38) 15%, rgb(38,38,38) 80%, rgba(202,255,51,0.2) 100%);      
+        @media screen and (min-width: 1440px) {
+            margin: 0;
+            border-radius: 8px;
+            min-width: 410px;
+        }  
     }
     &__money {
         position: relative;
@@ -60,26 +128,54 @@
         width: 100%;
         border-radius: 6px;
         background-color: var(--grey-10);
-        // background-image: linear-gradient(225.58deg, rgba(26, 26, 26, 0) 0.002%,rgb(26, 26, 26) 39.719%);
-        // background-image: url(/images/money-bg.png);
         background-size: cover;
         padding: 20px;
         display: flex;
         flex-direction: column;
         gap: 15px;
+        @media screen and (min-width: 1440px) {
+            width: 412px;
+            border-radius: 8px;
+            padding: 27px;
+            gap: 20px;
+        }  
+        @media screen and (min-width: 1920px) {
+            width: 518px;
+            border-radius: 10px;
+            padding: 35px;
+            gap: 26px;
+        }
     }
     &__money-transaction {
         position: relative;
         height: 133px;
+        @media screen and (min-width: 1440px) {
+            height: 182px;
+        }
+        @media screen and (min-width: 1920px) {
+            height: 225px;
+        }
     }
     &__money-transaction-text {
         margin-bottom: 10px;
+        @media screen and (min-width: 1440px) {
+            margin-bottom: 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            margin-bottom: 17px;
+        }
     }
     &__money-transaction-text, &__money-exchange-text {
         color: var(--absolute-white);
         font-size: 10.26px;
         font-weight: 500;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 17px;
+        }
     }
     &__money-transaction-card {
         position: absolute;
@@ -94,6 +190,18 @@
         border-radius: 6px;
         background-color: var(--grey-11);
         border: 0.51px solid var(--grey-15);
+        @media screen and (min-width: 1440px) {
+            padding: 11px 17px;
+            border-radius: 8px;
+            width: 355px;
+            top: 35px;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 14px 20px;
+            border-radius: 10px;
+            width: 446px;
+            top: 43px;
+        }
     }
     &__money-transaction-card-new, &__money-transaction-card-new1 {
         display: flex;
@@ -103,6 +211,14 @@
         border-radius: 6px;
         background-color: var(--grey-11);
         border: 0.51px solid var(--grey-15);
+        @media screen and (min-width: 1440px) {
+            padding: 11px 17px;
+            border-radius: 8px;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 14px 20px;
+            border-radius: 10px;
+        }
     }
     &__money-transaction-card-new {
         position: absolute;
@@ -110,6 +226,16 @@
         top: 58px;
         left: 10px;
         z-index: 1;
+        @media screen and (min-width: 1440px) {
+            width: 327px;
+            top: 78px;
+            left: 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 411px;
+            top: 90px;
+            left: 18px;
+        }
     }
     &__money-transaction-card-new1 {
         position: absolute;
@@ -117,11 +243,27 @@
         top: 89px;
         left: 20px;
         z-index: 0;
+        @media screen and (min-width: 1440px) {
+            width: 300px;
+            top: 120px;
+            left: 28px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 376px;
+            top: 138px;
+            left: 36px;
+        }
     }
     &__money-transaction-title {
         display: flex;
         align-items: center;
         gap: 5px;
+        @media screen and (min-width: 1440px) {
+            gap: 7px;
+        }
+        @media screen and (min-width: 1920px) {
+            gap: 9px;
+        }
     }
     &__money-transaction-img-box {
         background-color: var(--green-60);
@@ -131,23 +273,61 @@
         align-items: center;
         justify-content: center;
         border-radius: 27px;
+        @media screen and (min-width: 1440px) {
+            width: 30px;
+            height: 30px;
+            border-radius: 36px;
+        } 
+        @media screen and (min-width: 1920px) {
+            width: 38px;
+            height: 38px;
+            border-radius: 46px;
+        }         
+    }
+    &__money-transaction-img {
+        @media screen and (min-width: 1440px) {
+            width: 17px;
+            height: 17px;
+        } 
+        @media screen and (min-width: 1920px) {
+            width: 21px;
+            height: 21px;
+        } 
     }
     &__money-transaction-name {
         color: var(--absolute-white);
         font-size: 9px;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 12px;
+        } 
+        @media screen and (min-width: 1920px) {
+            font-size: 16px;
+        }
     }
     &__money-transaction-client {
         color: var(--absolute-white);
         font-size: 10px;
         font-weight: 400;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 14px;
+        }  
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
+        }
     }    
     &__money-transaction-sum {
         color: var(--absolute-white);
         font-size: 12px;
         font-weight: 500;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 16px;
+        }  
+        @media screen and (min-width: 1920px) {
+            font-size: 20px;
+        }
     }
     &__money-exchange-box {
         display: flex;
@@ -156,12 +336,28 @@
         border-radius: 6px;
         border: 0.51px solid var(--grey-15);
         background-color: var(--grey-11);
+        @media screen and (min-width: 1440px) {
+            margin-top: 20px;
+            border-radius: 8px;
+        }
+        @media screen and (min-width: 1920px) {
+            margin-top: 25px;
+            border-radius: 10px;
+        }
     }
     &__money-exchange-country {
         padding: 10px;
         width: 130px;
         border-bottom: 0.51px solid var(--grey-15);
         border-right: 0.51px solid var(--grey-15);
+        @media screen and (min-width: 1440px) {
+            width: 178px;
+            padding:14px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 223px;
+            padding:17px;
+        }
     }
     &__money-exchange-country:nth-child(2) {
         border-right: 0;
@@ -171,17 +367,41 @@
         align-items: center;
         color: var(--absolute-white);
         font-size: 9px;
-        font-weight: 400;
+        font-weight: 400;        
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 12px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 16px;
+        }
     }
     &__money-exchange-country-img {
         margin-right: 5px;
+        @media screen and (min-width: 1440px) {
+            width: 27px;
+            height: 27px;
+            margin-right: 7px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 35px;
+            height: 35px;
+            margin-right: 9px;
+        }
     }
     &__money-exchange-country-text {
         color: var(--white-90);
         font-size: 8px;
         line-height: 150%;
         margin-top: 5px;
+        @media screen and (min-width: 1440px) {
+            font-size: 11px;
+            margin-top: 7px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 14px;
+            margin-top: 9px;
+        }
     }
     &__money-exchange-num {
         width: 130px;
@@ -191,6 +411,16 @@
         font-weight: 500;
         line-height: 150%;
         border-right: 0.51px solid var(--grey-15);
+        @media screen and (min-width: 1440px) {
+            width: 178px;
+            font-size: 12px;
+            padding: 21px 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 223px;
+            font-size: 17px;
+            padding: 26px 17px;
+        }
     }
     &__money-exchange-num:last-child {
         border-right :0 ;
@@ -202,9 +432,25 @@
         font-weight: 400;
         line-height: 150%;
         padding: 8px 15px;
-        border: none;
+        border: 1px solid var(--green-10);
         border-radius: 42px;
         background-color: var(--green-10);
+        transition: 0.5s;
+        transform-origin: center;        
+        @media screen and (min-width: 1440px) {
+            font-size: 12px;
+            padding: 11px 20px;
+            border-radius: 57px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 16px;
+            padding: 14px 26px;
+            border-radius: 71px;
+        }
+    }
+    &__money-btn:hover {
+        border: 1px solid rgba(202,255,51,0.2);
+        box-shadow: inset 0px 0px 25px rgba(202,255,51,0.2);
     }
     &__money-income {
         position: absolute;
@@ -216,6 +462,20 @@
         padding: 8px 10px;
         border-radius: 6px;
         background-color: var(--green-10);
+        @media screen and (min-width: 1440px) {
+            gap: 7px;
+            padding: 11px 14px;
+            border-radius: 8px;
+            top: -34px;
+            left: -48px;
+        }
+        @media screen and (min-width: 1920px) {
+            gap: 9px;
+            padding: 14px 18px;
+            border-radius: 10px;
+            top: -44px;
+            left: -61px;
+        }
     }
     &__money-img-box {
         background-color: var(--green-60);
@@ -225,18 +485,50 @@
         align-items: center;
         justify-content: center;
         border-radius: 27px;
+        @media screen and (min-width: 1440px) {
+            width: 30px;
+            height: 30px;
+            border-radius: 36px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 38px;
+            height: 38px;
+            border-radius: 46px;
+        }
+    }
+    &__money-img {
+        @media screen and (min-width: 1440px) {
+            width: 16px;
+            height: 16px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 20px;
+            height: 20px;
+        }
     }
     &__money-message-sum {
         color: var(--absolute-white);
         font-size: 10px;
         font-weight: 400;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 14px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
+        }
     }
     &__money-message-days {
         color: var(--white-90);
         font-size: 8px;
         font-weight: 300;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 11px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 14px;
+        }
     }
     &__money-arrowbg {
         position: absolute;
@@ -245,8 +537,20 @@
         height: 201px;
         top: -19px;
         right: -47px;
-        background-image: url(/images/arrows-bg.svg);
+        background-image: url(../images/arrows-bg.svg);
         background-size: cover;
+        @media screen and (min-width: 1440px) {
+            width: 300px;
+            height: 275px;
+            top: -6px;
+            right: -131px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 418px;
+            height: 383px;
+            top: -10px;
+            right: -187px;
+        }
     }
     &__money-currency {
         position: absolute;
@@ -257,12 +561,30 @@
         align-items: center;
         border-radius: 41px;
         background-color: var(--green-10);
+        @media screen and (min-width: 1440px) {
+            padding: 7px 7px 7px 17px;
+            border-radius: 56px;
+            bottom: -67px;
+            right: -42px;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 9px 9px 9px 21px;
+            border-radius: 69px;
+            bottom: -82px;
+            right: -52px;
+        }
     }
     &__money-currency-text {
         color: var(--absolute-white);
         font-size: 9px;
         font-weight: 400;
         line-height: 150%;
+        @media screen and (min-width: 1440px) {
+            font-size: 12px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 16px;
+        }
     }
     &__money-currency-country {
         display: flex;
@@ -272,5 +594,25 @@
         border-radius: 28px;
         border: 0.51px solid var(--grey-15);
         background-color: var(--grey-10);
+        @media screen and (min-width: 1440px) {
+            gap: 5px;
+            padding: 7px;
+            border-radius: 38px;
+        }
+        @media screen and (min-width: 1920px) {
+            gap: 7px;
+            padding: 9px;
+            border-radius: 48px;
+        }
+    }
+    &__money-currency-country-img {
+        @media screen and (min-width: 1440px) {
+            width: 27px;
+            height: 27px;
+        }
+        @media screen and (min-width: 1920px) {
+            width: 35px;
+            height: 35px;
+        }
     }
 }
