--- a/sass/base/_products.scss
+++ b/sass/base/_products.scss
@@ -2,16 +2,41 @@
     max-width: 390px;
     margin: auto;
     padding: 60px 16px 40px 16px;
+    @media screen and (min-width: 1440px) {
+        min-width: 1440px;
+        padding: 60px 80px;
+    }
+    @media screen and (min-width: 1920px) {
+        min-width: 1920px;
+        padding: 75px 162px;
+    }
     &__title {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 20px;
+        @media screen and (min-width: 1440px) {
+            flex-direction: row;
+            gap: 150px;
+            align-items: end;
+        }
+        @media screen and (min-width: 1920px) {
+            gap: 300px;
+        }
     }
     &__title-text {
         color: var(--absolute-white);
         font-size: 28px;
         font-weight: 500;
         line-height: 150%;
+        text-align: center;
+        @media screen and (min-width: 1440px) {
+            font-size: 38px;
+            text-align: start;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 48px;
+        }
     }
     &__title-text-green {
         color: var(--green-60);
@@ -21,40 +46,69 @@
         color: var(--grey-70);
         line-height: 150%;
         text-align: center;
+        @media screen and (min-width: 1440px) {
+            font-size: 16px;
+            text-align: start;
+        }
+        @media screen and (min-width: 1920px) {
+            margin-top: 14px;
+            font-size: 18px;
+        }
     }
     &__title-btns {
         display: flex;
         padding: 12px;
-        margin-top: 20px;
         border-radius: 82px;
         border: 1px solid var(--grey-15);
         background-color: var(--grey-11);
+        @media screen and (min-width: 1440px) {
+            flex: none;
+        }
+        @media screen and (min-width: 1920px) {
+            padding: 14px;
+        }
     }
     &__title-btn-individuals {
         cursor: pointer;
-        padding: 10px 18px 10px 18px;
+        padding: 10px 18px;
         border-radius: 140px;
         border: none;
         background-color: var(--green-60);
         color: var(--grey-11);
         font-weight: 400;
         line-height: 150%;
+        @media screen and (min-width: 1920px) {
+            padding: 14px 24px;
+            font-size: 18px;
+        }
     }
     &__title-btn-businesses {
         cursor: pointer;
-        padding: 10px 18px 10px 18px;
+        padding: 10px 18px;
         border-radius: 140px;
         border: none;
         background-color: var(--grey-11);
         color: var(--absolute-white);
         font-weight: 400;
         line-height: 150%;
+        @media screen and (min-width: 1920px) {
+            padding: 14px 24px;
+            font-size: 18px;
+        }
     }
     &__list {
         display: flex;
         flex-direction: column;
         padding: 0 10px;
         margin-top: 60px;
+        @media screen and (min-width: 1440px) {
+            flex-direction: row;
+            margin-top: 80px;
+            padding: 0;
+        }
+        @media screen and (min-width: 1920px) {
+            margin-top: 100px;
+        }
     }
     &__card {
         display: flex;
@@ -63,13 +117,33 @@
         padding-bottom: 30px;
         padding-top: 30px;
         border-bottom: 1px solid var(--grey-15);
+        @media screen and (min-width: 1440px) {
+            padding-bottom: 0;
+            padding-top: 0;
+            border-bottom: 0;
+            padding-left: 40px;
+            padding-right: 40px;
+            border-left: 1px solid var(--grey-15);
+            width: calc(100% - 160px);
+        }
+        @media screen and (min-width: 1920px) {
+            padding-left: 50px;
+            padding-right: 50px;
+        }
     }
     &__card:first-child {
         padding-top: 0;
+        @media screen and (min-width: 1440px) {
+            padding-left: 0;
+            border-left: 0;
+        }
     }
     &__card:last-child {
         padding-bottom: 0;
         border-bottom: 0;
+        @media screen and (min-width: 1440px) {
+            padding-right: 0;
+        }
     }
     &__card-container-icon {
         margin-bottom: 20px;
@@ -78,6 +152,15 @@
         padding: 8px;
         border-radius: 70px;
         background-image: linear-gradient(180.00deg, rgba(202, 255, 51, 0.05),rgba(202, 255, 51, 0) 100%);
+        @media screen and (min-width: 1440px) {
+            margin-bottom: 24px;
+        }
+        @media screen and (min-width: 1920px) {
+            margin-bottom: 30px;
+            width: 98px;
+            height: 98px;
+            padding: 12px;
+        }
     }    
     &__card-container-icon-inner {
         width: 56px;
@@ -85,6 +168,17 @@
         padding: 14px;
         border-radius: 50px;
         background-image: linear-gradient(180.00deg, rgba(202, 255, 51, 0.1) -66.216%,rgba(202, 255, 51, 0) 85.461%);
+        @media screen and (min-width: 1920px) {
+            width: 74px;
+            height: 74px;
+            padding: 20px;
+        }
+    }
+    &__card-icon {
+        @media screen and (min-width: 1920px) {
+            width: 34px;
+            height: 34px;
+        }
     }
     &__card-title {
         margin-bottom: 12px;
@@ -92,10 +186,23 @@
         font-size: 20px;
         font-weight: 400;
         line-height: 150%;
-    }
+        @media screen and (min-width: 1440px) {
+            margin-bottom: 16px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    }    
     &__card-description {
         color: var(--grey-70);
         line-height: 150%;
         text-align: center;
+        @media screen and (min-width: 1440px) {
+            font-size: 16px;
+        }
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
+        }
     }
 }
