--- a/sass/base/_header.scss
+++ b/sass/base/_header.scss
@@ -58,42 +58,70 @@
         }
     }
     &__nav-list {
-        display: none;
-        align-items: center;
-        gap: 10px;
+        display: none;        
         @media screen and (min-width: 1440px) {
             display: flex;
+            align-items: center;
+            gap: 10px;
         }
     }
-    &__nav-item {
-        padding: 10px 18px;
-        border-radius: 82px;
-        transition: 0.2s;
-        @media screen and (min-width: 1920px) {
-            padding: 12px 24px;
-        }
+    &__nav-list li {
+        // padding: 10px 18px;
+        // border-radius: 82px;
+        transition: 0.3s;
     }
-    &__nav-item:hover {
-        padding: 10px 18px;
-        border-radius: 82px;
-        background-color: var(--grey-15);
-        @media screen and (min-width: 1920px) {
-            padding: 12px 24px;
-        }
-    }
+    // &__nav-list li:hover {
+    //     // padding: 10px 18px;
+    //     // border-radius: 82px;
+    //     transition: 0.5s;
+    //     background-color: var(--grey-15);
+    //     // @media screen and (min-width: 1920px) {
+    //     //     padding: 12px 24px;
+    //     // }
+    // }
+    // &__nav-item {
+    //     padding: 10px 18px;
+    //     border-radius: 82px;
+    //     transition: 0.2s;
+    //     @media screen and (min-width: 1920px) {
+    //         padding: 12px 24px;
+    //     }
+    // }
+    // &__nav-item:hover {
+    //     padding: 10px 18px;
+    //     border-radius: 82px;
+    //     background-color: var(--grey-15);
+    //     @media screen and (min-width: 1920px) {
+    //         padding: 12px 24px;
+    //     }
+    // }
     &__nav-link {
+        padding: 10px 18px;
+        transition: 0.3s;
+        border-radius: 82px;
         color: var(--white-90);
         font-weight: 400;
         line-height: 150%;  
         @media screen and (min-width: 1920px) {
+            padding: 12px 24px;
             font-size: 18px;        
         }             
     }
-    .current {
-        padding: 10px 18px;
+    &__nav-link:hover {
         border-radius: 82px;
         background-color: var(--grey-15);
+        @media screen and (min-width: 1920px) {
+            padding: 12px 24px;
+        }
     }
+    // .current {
+    //     padding: 10px 18px;
+    //     border-radius: 82px;
+    //     background-color: var(--grey-15);
+    //     @media screen and (min-width: 1920px) {
+    //         padding: 12px 24px;
+    //     }
+    // }
     &__btns {
         display: flex;
         gap: 10px;
@@ -145,6 +173,7 @@
         color: var(--grey-11);
     }
     &__nav-btn-mobile {
+        position: relative;
         cursor: pointer;
         padding: 6px 14px;
         border: none;
@@ -154,4 +183,54 @@
             display: none;
         }
     }
+    // .menu-icon {
+    //     position: relative;
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     cursor: pointer;
+    //     width: 56px;
+    //     height: 40px;
+    //     border: none;
+    //     border-radius: 82px;
+    //     background-color: var(--green-60);
+    //     @media screen and (min-width: 1440px) {
+    //         display: none;
+    //     }
+    // }
+    // .burger {
+    //     left: 35%;
+    //     position: absolute;
+    //     height: 1.8px;
+    //     width: 20px;
+    //     border-radius: 20px;
+    //     transition: all 0.53 ease 0s;
+    //     transform:  scale(1) translate(0px, -50%);
+    //     background-color: var(--grey-11);
+    // }
+    
+    // .burger::before {
+    //     left: 0;
+    //     position: absolute;
+    //     top: -6px;
+    //     height: 1.8px;
+    //     width: 20px;
+    //     background-color: var(--grey-11);
+    //     content: "";
+    //     border-radius: 20px;
+    //     transition-duration: .25s;
+    //     transition: transform .25s, top .25s .25s;  
+    // }
+    // .burger::after {
+    //     left: 50%;
+    //     position: absolute;
+    //     top: 6px;
+    //     height: 1.8px;
+    //     width: 10px;
+    //     background-color: var(--grey-11);
+    //     content: "";
+    //     border-radius: 20px;
+    //     transition-duration: .25s;
+    //     transition: transform .25s, top .25s .25s;
+    // }
 }
